--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="root" class='h-screen prose p-4'></div>
+  <div id="root" class='h-screen prose max-w-full'></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
